--- a/vercel.json
+++ b/vercel.json
@@ -18,9 +18,12 @@
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
         }
       ]
     }
   ]
 }
-
