--- a/vercel.json
+++ b/vercel.json
@@ -9,15 +9,27 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://appssdk.zoom.us; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://zoom.us https://*.zoom.us; frame-ancestors 'self' https://zoom.us https://*.zoom.us; font-src 'self' data:;"
+          "value": "default-src 'self'; script-src 'self' 'sha256-/NJlk8M7ECeHuwSEZrwyU2yBH4Oe4Iraelz9xU8uJU0=' 'sha256-GF3lOttml0ApHp6MdD5JJdDS4GYm+U3rZxb6Lsva92I=' 'unsafe-inline' 'unsafe-eval' https://appssdk.zoom.us; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://zoom.us https://*.zoom.us; frame-ancestors 'self' https://zoom.us https://*.zoom.us; font-src 'self' data:; worker-src 'self' blob:; wasm-unsafe-eval 'self';"
         },
         {
-          "key": "X-Frame-Options",
-          "value": "ALLOW-FROM https://zoom.us"
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains; preload"
         },
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "SAMEORIGIN"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Permissions-Policy",
+          "value": "geolocation=(), microphone=(), camera=()"
         }
       ]
     }
